Fix Crash concurrent exception Fix disembark et affiche tout les exobio de toute les planete